WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215222
[Mac,WK2] REGRESSION(
r262322
): ScreenTime overlay is hidden in fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=215222
Summary
[Mac,WK2] REGRESSION(r262322): ScreenTime overlay is hidden in fullscreen mode
Jer Noble
Reported
2020-08-06 10:02:13 PDT
[Mac,WK2] REGRESSION(
r262322
): ScreenTime overlay is hidden in fullscreen mode
Attachments
Patch
(1.99 KB, patch)
2020-08-06 10:05 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-08-06 10:02:57 PDT
<
rdar://problem/65871844
>
Jer Noble
Comment 2
2020-08-06 10:05:22 PDT
Created
attachment 406088
[details]
Patch
EWS
Comment 3
2020-08-06 11:30:50 PDT
Committed
r265339
: <
https://trac.webkit.org/changeset/265339
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406088
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug